tests/invalid/nested_capture_type_mismatch/main.py
def run_case() -> None:
    x: int = 1

    def inner() -> int:
        return x

    x = "oops"
    y: int = inner()


if __name__ == "__main__":
    run_case()
